Add portfolio works to project

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="row">
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="images/cheetah.png">
+                    <img src="images/portfolio/home-page.gif">
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -348,13 +348,13 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="https://github.com/tw5033/lighthouse-chatty/blob/screenshots/screenshots/img.png?raw=true">
+                    <img src="images/portfolio/img.png">
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>Chatty-App</h3>
                     <p>
-                      A SPA built with ReactJS that allows users with communicate with one another.
+                      A SPA built with ReactJS that allows users with communicate with one another. Users do not have to register for an account to be able to chat with each other.
                     </p>
                     <a href="https://github.com/tw5033/lighthouse-chatty">View Project</a>
                 </div>
@@ -363,7 +363,7 @@
             <!-- End .project -->
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="images/tweeter.png">
+                    <img src="images/portfolio/tweeter.png">
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
