Edit tweeter description

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <div class="project-info">
                     <h3>Tweeter</h3>
                     <p>
-                        A simple, single-page Twitter clone. The purpose of the project was to get some taste of front-end development as well as MongoDB experience
+                        A simple, single-page Twitter clone. First major project worked on during Lighthouse Lab's web development bootcamp. Focuses were on learning front-end development and working with MongoDB as a database.
                     </p>
                     <a href="https://github.com/tw5033/tweeter">View Project</a>
                 </div>
